# cardiac-activation

./: .gitignore  LICENSE  README.md
models_cpp/: CMakeLists.txt  README.md  main.cpp  model_RDQ18.cpp  model_RDQ18.hpp  model_RDQ20_MF.cpp  model_RDQ20_MF.hpp  model_RDQ20_SE.cpp  model_RDQ20_SE.hpp  sarcomere.cpp  sarcomere.hpp
models_matlab/: README.md  main.m  model_RDQ18.m  model_RDQ20_MF.m  model_RDQ20_SE.m  postprocess.m
models_python/: README.md  main.py  model_RDQ18.py  model_RDQ20_MF.py  model_RDQ20_SE.py  postprocess.py
params/: params_RDQ18.json  params_RDQ20-MF_human_body-temperature.json  params_RDQ20-MF_rat_room-temperature.json  params_RDQ20-SE_human_body-temperature.json  params_RDQ20-SE_rat_room-temperature.json
